# chord_extraction_prediction_lib

./: .gitmodules  LICENSE  README.md  requirements.txt
Chord_extrc_external/src/: CMakeLists.txt
Chord_extrc_external/src/frontend/maxmsp/chord_extrc/: CMakeLists.txt  chord_extrc.cpp
Max_library/app/: launch_ace_osc.sh
Max_library/docs/: chord_extrc.extractor_cqt.maxref.xml  chord_extrc.maxref.xml  nn~.maxref.xml
Max_library/patchers/: __Combining_chordExtrcAndPred__.maxhelp  __Example1__.maxhelp  ace_extracor.maxhelp  ace_extracor.maxpat  automatic_chord_extractor.maxhelp  automatic_chord_extractor.maxpat  chord_seq_predictor.maxhelp  chord_seq_predictor.maxpat  mulit_chord_seq_predictor.maxhelp  multi_chord_seq_predictor.maxhelp  multi_chord_seq_predictor.maxpat  multi_step_prediction.maxpat  real_time_ace_extracor.maxhelp  real_time_ace_extracor.maxpat  real_time_ace_extractor.maxhelp  real_time_ace_extractor.maxpat
Max_library/patchers/ACE_objects/: Launch_ACE.maxpat  Launch_DYCI2_agents_ACE.maxpat  Launch_DYCI2_agents_script_ACE.maxpat  Launch_server_script_ACE.maxpat  ace_model_select.maxpat  pred_model_select.maxpat  real_time_ace_model_select.maxpat
Python_library/: OSC_run.py  ace_model.py  pred_model.py
Python_library/chord_alphabets/: alphaA0.txt  alphaA2.txt  alphaA5.txt
Python_library/modelGen/modelSave200908/a0_124_1_124_mlpDecimFamily/: resa0_124_1_124_mlpDecimFamily.pkl
Python_library/modelGen/modelSave200908/a0_124_1_1_lstmDecim/: a0_124_1_1_lstmDecim  resa0_124_1_1_lstmDecim.pkl
Python_library/modelGen/modelSave200908/a0_124_1_1_mlpDecim/: a0_124_1_1_mlpDecim  resa0_124_1_1_mlpDecim.pkl
Python_library/modelGen/modelSave200908/a0_124_1_1_mlpDecimAug/: resa0_124_1_1_mlpDecimAug.pkl
Python_library/modelGen/modelSave200908/a2_124_1_124_mlpDecimFamily/: resa2_124_1_124_mlpDecimFamily.pkl
Python_library/modelGen/modelSave200908/a2_124_1_1_lstmDecim/: a2_124_1_1_lstmDecim  resa2_124_1_1_lstmDecim.pkl
Python_library/modelGen/modelSave200908/a2_124_1_1_mlpDecim/: resa2_124_1_1_mlpDecim.pkl
Python_library/modelGen/modelSave200908/a2_124_1_1_mlpDecimAug/: resa2_124_1_1_mlpDecimAug.pkl
Python_library/modelGen/modelSave200908/a5_124_1_124_mlpDecimFamily/: resa5_124_1_124_mlpDecimFamily.pkl
Python_library/seq2seq/: seq2seqModel.py  seq2seqModel_onehot.py
Python_library/utilities/: ACEmodels.py  modelsGen.py  util.py
(+44 files in other folders)
